# mcp-chrome-python

./: .gitignore  DEBUGGING.md  README.md  mcp-chrome-bridge.spec  pnpm-lock.yaml  test-launch.spec  test-native-msg.cjs  test_pipe
app/bridge-python/: .gitignore  README.md  logging_config.py  main.py  mcp_server_logic.py  pyproject.toml  test_client.py  test_launch.py  utils.py
app/bridge-python/api/: main.py
app/bridge-python/bridge/: base.py  native_messaging.py  websocket_bridge.py
app/bridge-python/bridge_python/: __init__.py  __main__.py
app/bridge-python/schemas/: shared.py  tool_arguments.py  tool_schemas.py
app/bridge-python/scripts/: build_binary.py
app/bridge-python/tests/: test_websocket_bridge.py
app/chrome-extension/common/: constants.ts
app/chrome-extension/entrypoints/background/: index.ts  native-host.ts  websocket-host.ts
plans/: agile-juggling-ripple.md  composed-sauteeing-cake.md  precious-roaming-hellman.md  python-bridge-command-flow-fix.md  server-improvements.md  websocket-extension-plan.md
